include potential in math